--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                   <div class="box">
                     <div class="detail-box">
                       <h1>
-                        Boxing <br />
-                        Center
+                        Sporting <br />
+                        Pearls
                       </h1>
                       <hr />
                       <div class="btn-box">
@@ -135,13 +135,13 @@
                   <div class="box">
                     <div class="detail-box">
                       <h1>
-                        Boxing <br />
-                        Center
+                        Sporting <br />
+                        Pearls
                       </h1>
                       <hr />
                       <div class="btn-box">
                         <a href="" class="btn-1">
-                          Contact Us
+                          About Us
                         </a>
                       </div>
                     </div>
@@ -151,13 +151,13 @@
                   <div class="box">
                     <div class="detail-box">
                       <h1>
-                        Boxing <br />
-                        Center
+                        Sporting <br />
+                        Pearls
                       </h1>
                       <hr />
                       <div class="btn-box">
                         <a href="" class="btn-1">
-                          Contact Us
+                          Our Players
                         </a>
                       </div>
                     </div>
@@ -191,11 +191,17 @@
                 <div class="detail-box">
                   <div class="heading_container">
                     <h2>
-                      About Class
+                      FC Sporting Pearls Academy
                     </h2>
                   </div>
                   <p>
-                    iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipnisi ut aliquipiusmod tempor incididunt ut labore et
+                    Sporting Pearls operates a football academy for age groups Under-10 through
+to Under-21. The categorization system permits more contact with young
+players and ensures their developments and participations to elite
+competitions at young level. The Sporting Pearls Sports' project was
+established officially in 2025 with a clear goal to grant academic as well as
+sports training to children and young players, both boys and girls, who are
+socially strongly disadvantaged, by football serving as life skills.
                   </p>
                   <hr />
                   <a href="">
