--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Oxer</title>
+  <title>Sporting Pearls</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -228,11 +228,17 @@ socially strongly disadvantaged, by football serving as life skills.
               <div class="col-lg-9 col-md-10">
                 <div class="heading_container">
                   <h2>
-                    Our Classes Videos
+                   WHAT WE DO!
                   </h2>
                   <p>
-                    iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
-                    ostrud exercitation ullamco laboris iusmod tempor incididunt ut labore et dolore
+                    As we value long term commitment to prosper as an all-round youth football
+academy, we find, grow and develop skills and talents and create an olive of
+professionals with better background anchored in our core values principles
+that includes, professionalism, respect, humility, one-team culture, reward
+through effort, fair play, commitment and self-confidence. 
+                    <h2>
+                   OUR PLAYERS
+                  </h2>
                   </p>
                 </div>
               </div>
