--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>demo@gmail.com</span>
+                    <span>info@sportingpearls.com</span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/location.png" alt="" />
-                    <span>Den mark Loram ipusum</span>
+                    <span>Majengo, Kilifi</span>
                   </a>
                 </li>
               </ul>
