--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/telephone.png" alt="" />
-                    <span> +01 1234567890</span>
+                    <span> +254 114672189</span>
                   </a>
                 </li>
                 <li class="">
@@ -344,7 +344,7 @@ through effort, fair play, commitment and self-confidence.
         <div class="col-md-10 ml-auto">
           <div class="heading_container">
             <h2>
-              Latest Blog
+              Latest News
             </h2>
             <p>
               iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
