--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>info@pearls.com</span>
+                    <span>info@rls.com</span>
                   </a>
                 </li>
                 <li class="">
@@ -103,7 +103,7 @@
           <div class="col-md-2 offset-md-2">
             <div class="slider_heading">
               <h2>
-                PEA<span>RLS</span>
+                EAP<span>SLR</span>
               </h2>
             </div>
           </div>
