--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="col-md-2 offset-md-2">
             <div class="slider_heading">
               <h2>
-                EAP<span>SLR</span>
+                <span></span>
               </h2>
             </div>
           </div>
