--- a/index.html
+++ b/index.html
@@ -195,13 +195,7 @@
                     </h2>
                   </div>
                   <p>
-                    Sporting Pearls operates a football academy for age groups Under-10 through
-to Under-21. The categorization system permits more contact with young
-players and ensures their developments and participations to elite
-competitions at young level. The Sporting Pearls Sports' project was
-established officially in 2025 with a clear goal to grant academic as well as
-sports training to children and young players, both boys and girls, who are
-socially strongly disadvantaged, by football serving as life skills.
+                    FC Sporting Pearls is more than just a football club—it’s a beacon of hope, opportunity, and community transformation. Founded in 2020 and officially established on January 3rd, 2025, we are headquartered in Majengo-Kanamai, Kilifi, Kenya. Our mission is to harness the power of sport to uplift individuals, empower communities, and create a lasting legacy of excellence and inclusivity.
                   </p>
                   <hr />
                   <a href="">
