--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ through effort, fair play, commitment and self-confidence.
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/c1.jpg" alt="">
+                      <img src="images/34.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
