--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ through effort, fair play, commitment and self-confidence.
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/c1.jpg" alt="">
+                      <img src="images/23.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
