--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ through effort, fair play, commitment and self-confidence.
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Boxing
+                         Player 1
                         </h2>
                       </div>
                     </div>
@@ -262,13 +262,13 @@ through effort, fair play, commitment and self-confidence.
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/c2.jpg" alt="">
+                      <img src="images/24.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Boxing
+                          Player 2
                         </h2>
                       </div>
                     </div>
@@ -302,7 +302,7 @@ through effort, fair play, commitment and self-confidence.
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/c2.jpg" alt="">
+                      <img src="images/20b.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
@@ -338,10 +338,12 @@ through effort, fair play, commitment and self-confidence.
         <div class="col-md-10 ml-auto">
           <div class="heading_container">
             <h2>
-              Latest News
+              VISION STATEMENT
             </h2>
             <p>
-              iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
+              We believe in developing a first-class football club within Coastal region,
+Kenya with interest tapped in grassroots development of players and coaches
+that will also provide the tools for everyone to succeed in the beautiful game. 
             </p>
           </div>
         </div>
@@ -362,10 +364,14 @@ through effort, fair play, commitment and self-confidence.
                     </h6>
                   </div>
                   <h3>
-                    Boxer Joniya Daro
+                    OUR GOAL
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                  Our primary goal with youth soccer is not just to win games but to connect with
+and fully develop every individual player in society we live in. 
+We aim to create to create a suitable and sustainable environment that would
+help individual athletes both on and off the field to be the best players and
+people that they can be. 
                   </p>
                   <a href="">
                     Read More
@@ -390,10 +396,13 @@ through effort, fair play, commitment and self-confidence.
                     </h6>
                   </div>
                   <h3>
-                    Boxer Joniya Daro
+                    OUR LOGO
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    Our logo was influenced by the butterfly's life cycle which emphasize our grit
+to detect progressive success that, we don't just wake up and become butterfly
+but we believe growth is a process and it's never too late to transform ourselves
+into our original dreams and visions. 
                   </p>
                   <a href="">
                     Read More
@@ -418,10 +427,11 @@ through effort, fair play, commitment and self-confidence.
           <div class="client_container">
             <div class="heading_container">
               <h2>
-                What Says Our students
+                What Says Our Founders
               </h2>
               <p>
-                iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
+              We are looking provide an environment where players can express themselves, be
+creative and love the game of football.
               </p>
             </div>
             <div class="client_box-container">
