--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>info@rls.com</span>
+                    <span>info@sportingpearls.com</span>
                   </a>
                 </li>
                 <li class="">
@@ -444,10 +444,13 @@ creative and love the game of football.
                       </div>
                       <div class="detail-box">
                         <h4>
-                          Jone Moe
+                          Stephen Mannley
                         </h4>
                         <p>
-                          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum </p>
+                        We believe success comes and will always come from the energy of our
+people. We have a determination to learn and do things better. We depend
+upon developing and deploying best approach to nurture and grow talents
+who will fit in any society. </p>
                         <img src="images/quote.png" alt="" />
                       </div>
                     </div>
@@ -462,7 +465,11 @@ creative and love the game of football.
                           Lio Uji
                         </h4>
                         <p>
-                          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum </p>
+                          As we value long term commitment to prosper as an all-round youth football
+academy, we find, grow and develop skills and talents and create an olive of
+professionals with better background anchored in our core values principles
+that includes, professionalism, respect, humility, one-team culture, reward
+through effort, fair play, commitment and self-confidence. </p>
                         <img src="images/quote.png" alt="" />
                       </div>
                     </div>
