--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@
               <div class="col-lg-9 col-md-10">
                 <div class="heading_container">
                   <h2>
-                   WHAT WE DO!
+                   OUR MISSION
                   </h2>
                   <p>
-                    As we value long term commitment to prosper as an all-round youth football
-academy, we find, grow and develop skills and talents and create an olive of
-professionals with better background anchored in our core values principles
-that includes, professionalism, respect, humility, one-team culture, reward
-through effort, fair play, commitment and self-confidence. 
+                    • To provide an environment where players can express themselves, be
+creative and love the game of football. 
+• To also develop well rounded coastal players through proper football
+environmentwhich teaches respect, humility, integrity, reward through
+effort and fair play. 
                     <h2>
                    OUR PLAYERS
                   </h2>
