--- a/index.html
+++ b/index.html
@@ -225,9 +225,10 @@
                    OUR MISSION
                   </h2>
                   <p>
-                    • To provide an environment where players can express themselves, be
+                    To provide an environment where players can express themselves, be
 creative and love the game of football. 
-• To also develop well rounded coastal players through proper football
+                    
+To also develop well rounded coastal players through proper football
 environmentwhich teaches respect, humility, integrity, reward through
 effort and fair play. 
                     <h2>
@@ -578,8 +579,8 @@ through effort, fair play, commitment and self-confidence. </p>
                   </a>
                 </div>
                 <p>
-                  &copy; 2020 All Rights Reserved. Design by
-                  <a href="https://html.design/">Free Html Templates</a>
+                  &copy; 2025 All Rights Reserved.
+                  <a href="https://html.design/">Sporting Pearls</a>
                 </p>
               </section>
               <!-- footer section -->
