--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ effort and fair play.
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Boxing
+                          Player 3
                         </h2>
                       </div>
                     </div>
@@ -309,7 +309,7 @@ effort and fair play.
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Boxing
+                          Player 5
                         </h2>
                       </div>
                     </div>
