--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     </h2>
                   </div>
                   <p>
-                    FC Sporting Pearls is more than just a football club—it’s a beacon of hope, opportunity, and community transformation. Founded in 2020 and officially established on January 3rd, 2025, we are headquartered in Majengo-Kanamai, Kilifi, Kenya. Our mission is to harness the power of sport to uplift individuals, empower communities, and create a lasting legacy of excellence and inclusivity.
+                    FC Sporting Pearls is more than just a football club, it’s a beacon of hope, opportunity, and community transformation. Founded in 2020 and officially established on January 3rd, 2025, we are headquartered in Majengo-Kanamai, Kilifi, Kenya. Our mission is to harness the power of sport to uplift individuals, empower communities, and create a lasting legacy of excellence and inclusivity.
                   </p>
                   <hr />
                   <a href="">
@@ -281,6 +281,26 @@ effort and fair play.
                   </div>
                 </div>
                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/34.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <div class="item">
                   <div class="box">
                     <div class="img-box">
                       <img src="images/34.jpg" alt="">
