--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ that will also provide the tools for everyone to succeed in the beautiful game.
         <div class="col-md-6 pl-0">
           <div class="box b1">
             <div class="img-box">
-              <img src="images/b1.jpg" alt="">
+              <img src="images/team_5.jpg" alt="">
             </div>
             <div class="row">
               <div class="col-lg-8 col-md-10 ml-auto">
@@ -405,15 +405,15 @@ people that they can be.
         <div class="col-md-6 pr-0">
           <div class="box b2">
             <div class="img-box">
-              <img src="images/b2.jpg" alt="">
+              <img src="images/logo.png" alt="">
             </div>
             <div class="row">
               <div class="col-lg-8 col-md-10 mr-auto">
                 <div class="detail-box">
                   <div class="img_date">
                     <h6>
-                      17 <br>
-                      Jun
+                      06 <br>
+                      Jan
                     </h6>
                   </div>
                   <h3>
