--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@ creative and love the game of football.
                   <div class="item">
                     <div class="box">
                       <div class="img-box">
-                        <img src="images/client1.png" alt="" />
+                        <img src="images/coach 1.jpg" alt="" />
                       </div>
                       <div class="detail-box">
                         <h4>
-                          Stephen Mannley
+                          Stephen Manley
                         </h4>
                         <p>
                         We believe success comes and will always come from the energy of our
@@ -479,7 +479,7 @@ who will fit in any society. </p>
                   <div class="item">
                     <div class="box">
                       <div class="img-box">
-                        <img src="images/client2.png" alt="" />
+                        <img src="images/coach 2.jpg" alt="" />
                       </div>
                       <div class="detail-box">
                         <h4>
