--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ who will fit in any society. </p>
                       </div>
                       <div class="detail-box">
                         <h4>
-                          Lio Uji
+                          Idriss
                         </h4>
                         <p>
                           As we value long term commitment to prosper as an all-round youth football
@@ -500,31 +500,6 @@ through effort, fair play, commitment and self-confidence. </p>
                       <div class="img-box">
                         <img src="images/client1.png" alt="" />
                       </div>
-                      <div class="detail-box">
-                        <h4>
-                          Jone Moe
-                        </h4>
-                        <p>
-                          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum </p>
-                        <img src="images/quote.png" alt="" />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="item">
-                    <div class="box">
-                      <div class="img-box">
-                        <img src="images/client2.png" alt="" />
-                      </div>
-                      <div class="detail-box">
-                        <h4>
-                          Lio Uji
-                        </h4>
-                        <p>
-                          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum </p>
-                        <img src="images/quote.png" alt="" />
-                      </div>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
