--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ creative and love the game of football.
                   <div class="item">
                     <div class="box">
                       <div class="img-box">
-                        <img src="images/coach 1.jpg" alt="" />
+                        <img src="images/coach 2.jpg" alt="" />
                       </div>
                       <div class="detail-box">
                         <h4>
@@ -479,7 +479,7 @@ who will fit in any society. </p>
                   <div class="item">
                     <div class="box">
                       <div class="img-box">
-                        <img src="images/coach 2.jpg" alt="" />
+                        <img src="images/coach 1.jpg" alt="" />
                       </div>
                       <div class="detail-box">
                         <h4>
@@ -583,7 +583,7 @@ through effort, fair play, commitment and self-confidence. </p>
             </div>
             <div class="col-md-6  px-0">
               <div class="img-box">
-                <img src="images/footer-img.jpg" alt="">
+                <img src="images/team_8.jpg" alt="">
               </div>
             </div>
           </div>
