--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>info@sportingpearls.com</span>
+                    <span>pearlssporting@gmail.com</span>
                   </a>
                 </li>
                 <li class="">
@@ -483,7 +483,7 @@ who will fit in any society. </p>
                       </div>
                       <div class="detail-box">
                         <h4>
-                          Idriss
+                          Hashim Hassan
                         </h4>
                         <p>
                           As we value long term commitment to prosper as an all-round youth football
