--- a/index.html
+++ b/index.html
@@ -320,6 +320,106 @@ effort and fair play.
                     </div>
                   </div>
                 </div>
+                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/34.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/34.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/34.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/34.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/34.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
