--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ effort and fair play.
                  <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/34.jpg" alt="">
+                      <img src="images/21b.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
@@ -323,7 +323,7 @@ effort and fair play.
                  <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/34.jpg" alt="">
+                      <img src="images/23.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
@@ -343,7 +343,7 @@ effort and fair play.
                  <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/34.jpg" alt="">
+                      <img src="images/24.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
@@ -363,7 +363,7 @@ effort and fair play.
                  <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/34.jpg" alt="">
+                      <img src="images/25.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
@@ -383,7 +383,7 @@ effort and fair play.
                  <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/34.jpg" alt="">
+                      <img src="images/26.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
@@ -403,7 +403,87 @@ effort and fair play.
                  <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/34.jpg" alt="">
+                      <img src="images/27.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/28.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/29.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/30.jpg" alt="">
+                      <div class="detail-box">
+                        <button>
+                          <img src="images/play-icon.png" alt="">
+                        </button>
+                        <h2>
+                          Player 3
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="">
+                        See More
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/31.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
