--- a/index.html
+++ b/index.html
@@ -246,10 +246,13 @@ effort and fair play.
                       <img src="images/23.jpg" alt="">
                       <div class="detail-box">
                         <button>
-                          <img src="images/play-icon.png" alt="">
+                          <img src="images/001.png" alt="">
                         </button>
                         <h2>
-                         Player 1
+                        Ragaso Karisa
+                        </h2>
+                         <h2>
+                         Goalkeeper
                         </h2>
                       </div>
                     </div>
