--- a/index.html
+++ b/index.html
@@ -248,12 +248,10 @@ effort and fair play.
                         <button>
                           <img src="images/001.png" alt="">
                         </button>
-                        <h2>
-                        Ragaso Karisa
-                        </h2>
-                         <h2>
-                         Goalkeeper
-                        </h2>
+                        <div style="text-align: center;">
+                         <h2>Ragaso Karisa</h2>
+                          <h2>Goalkeeper</h2>
+                        </div>
                       </div>
                     </div>
                     <div class="btn-box">
