--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ effort and fair play.
                         <button>
                           <img src="images/001.png" alt="">
                         </button>
-                        <div style="text-align: center;">
+                        <div style="text-align: left;">
                          <h2>Ragaso Karisa</h2>
                           <h2>Goalkeeper</h2>
                         </div>
