--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                         <a class="nav-link" href="about.html"> About </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="class.html"> Classes </a>
+                        <a class="nav-link" href="class.html"> Players </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="blog.html">Blog</a>
@@ -110,7 +110,7 @@
                 <div class="detail-box">
                   <div class="heading_container">
                     <h2>
-                      About Class
+                      About Players
                     </h2>
                   </div>
                   <p>
@@ -193,8 +193,8 @@
                   </a>
                 </div>
                 <p>
-                  &copy; 2020 All Rights Reserved. Design by
-                  <a href="https://html.design/">Free Html Templates</a>
+                  &copy; 2025 All Rights Reserved. Design by
+                  <a href="https://html.design/">Sporting Pearls</a>
                 </p>
               </section>
               <!-- footer section -->
@@ -202,7 +202,7 @@
             </div>
             <div class="col-md-6  px-0">
               <div class="img-box">
-                <img src="images/footer-img.jpg" alt="">
+                <img src="images/team_3.jpg" alt="">
               </div>
             </div>
           </div>
