--- a/index (1).html
+++ b/index (1).html
@@ -239,37 +239,276 @@ effort and fair play.
               </div>
             </div>
             <div class="class_box-container">
-              <!-- Add Navigation Arrows -->
-              <div class="owl-nav">
-                <button class="owl-prev">‹</button>
-                <button class="owl-next">›</button>
-              </div>
-
-              <div class="owl-carousel owl_carousel1">
-                <div class="item">
-                  <div class="box">
-                    <div class="img-box">
-                      <img src="images/23.jpg" alt="">
-                      <div class="detail-box">
-                        <button>
-                          <img src="images/001.png" alt="">
-                        </button>
-                        <div style="text-align: centre;">
-                          
-                         <h2>Ragaso Karisa</h2>
-                          
-                          <h2>Goalkeeper</h2>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="btn-box">
-                      <a href="">
-                        See More
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <!-- Repeat other items here -->
+           <div class="owl-carousel owl_carousel1">
+  <!-- Player Item Template - Repeat 40x -->
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Ragaso Karisa</h2>
+            <h2 class="player-position">Goalkeeper</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Menza Harry</h2>
+            <h2 class="player-position">Defender</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+ <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Nelson Stewart</h2>
+            <h2 class="player-position">Defender</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+   <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Martin Kazungu</h2>
+            <h2 class="player-position">Defender</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+   <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Salim Omar</h2>
+            <h2 class="player-position">Defender</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Ali Luwali</h2>
+            <h2 class="player-position">Midfielder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+  <div class="box">
+    <div class="img-box">
+      <img src="images/23.jpg" alt="Player">
+      <div class="detail-box">
+        <div class="jersey-number">
+          <img src="images/016.png" alt="Jersey 016">
+        </div>
+        <div class="player-info">
+          <h2 class="player-name">Salim Ali</h2>
+          <h2 class="player-position">Midfielder</h2>
+        </div>
+      </div>
+    </div>
+    <div class="btn-box">
+      <a href="#">View Profile</a>
+    </div>
+  </div>
+</div>
+<div class="item">
+  <div class="box">
+    <div class="img-box">
+      <img src="images/23.jpg" alt="Player">
+      <div class="detail-box">
+        <div class="jersey-number">
+          <img src="images/030.png" alt="Jersey 030">
+        </div>
+        <div class="player-info">
+          <h2 class="player-name">Hassan Juma</h2>
+          <h2 class="player-position">Midfielder</h2>
+        </div>
+      </div>
+    </div>
+    <div class="btn-box">
+      <a href="#">View Profile</a>
+    </div>
+  </div>
+</div>
+  <div class="item">
+  <div class="box">
+    <div class="img-box">
+      <img src="images/23.jpg" alt="Player">
+      <div class="detail-box">
+        <div class="jersey-number">
+          <img src="images/040.png" alt="Jersey 040">
+        </div>
+        <div class="player-info">
+          <h2 class="player-name">David Nyamawangi</h2>
+          <h2 class="player-position">Midfielder</h2>
+        </div>
+      </div>
+    </div>
+    <div class="btn-box">
+      <a href="#">View Profile</a>
+    </div>
+  </div>
+</div>
+   <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Walcott Ria</h2>
+            <h2 class="player-position">Midfielder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">David Mugasia</h2>
+            <h2 class="player-position">Midfielder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Faki Kombe</h2>
+            <h2 class="player-position">Midfeilder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Kelvin Gitonga</h2>
+            <h2 class="player-position">Forward</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Juma Munga</h2>
+            <h2 class="player-position">Forward</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <!-- Repeat above block 39 more times -->
+</div>
               </div>
             </div>
           </div>
@@ -530,28 +769,24 @@ through effort, fair play, commitment and self-confidence. </p>
   </script>
 
   <!-- owl carousel script -->
-  <script type="text/javascript">
-    $(document).ready(function(){
-      $(".owl_carousel1").owlCarousel({
-        items: 2, // Number of items to display
-        loop: true,
-        margin: 20, // Space between items
-        nav: true,
-        navText: ["‹","›"], // Custom navigation arrows
-        responsive:{
-          0:{ // Mobile
-            items:1
-          },
-          768:{ // Tablet
-            items:2
-          },
-          992:{ // Desktop
-            items:2
-          }
-        }
-      });
-    });
-  </script>
+ <script type="text/javascript">
+$(document).ready(function(){
+  $(".owl_carousel1").owlCarousel({
+    items: 4,
+    loop: true,
+    margin: 20,
+    nav: true,
+    navText: ["‹","›"],
+    dots: false, // New addition
+    responsive:{
+      0:{ items:1 },
+      576:{ items:2 },
+      768:{ items:3 }, // New breakpoint
+      1200:{ items:4 }
+    }
+  });
+});
+</script>
   <!-- end owl carousel script -->
 
   <script>
