--- a/class.html
+++ b/class.html
@@ -49,7 +49,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>demo@gmail.com</span>
+                    <span>info@sportingpearls.com</span>
                   </a>
                 </li>
                 <li class="">
@@ -78,7 +78,7 @@
                         <a class="nav-link" href="about.html"> About </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="class.html"> Classes </a>
+                        <a class="nav-link" href="class.html"> Players </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="blog.html">Blog</a>
