--- a/index.html
+++ b/index.html
@@ -231,63 +231,284 @@ creative and love the game of football.
 To also develop well rounded coastal players through proper football
 environmentwhich teaches respect, humility, integrity, reward through
 effort and fair play. 
-                   <section class="class_section">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-10 col-lg-8 mx-auto">
-          <div class="class_container">
-            <div class="row">
-              <div class="col-lg-9 col-md-10">
-                <div class="heading_container">
-                  <h2>OUR PLAYERS</h2>
+                    <h2>
+                   OUR PLAYERS
+                  </h2>
+                  </p>
                 </div>
               </div>
             </div>
-
-               <div class="class_box-container">
-              <div class="owl-carousel owl_carousel1">
-                <!-- Player Item 1 -->
-                <div class="item">
-                  <div class="box">
-                    <div class="img-box">
-                      <img src="images/23.jpg" alt="Player">
-                      <div class="detail-box">
-                        <button>
-                          <img src="images/001.png" alt="Icon">
-                        </button>
-                        <div style="text-align: center;">
-                          <h2>Ragaso Karisa</h2>
-                          <h2>Goalkeeper</h2>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="btn-box">
-                      <a href="#">See More</a>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Player Item 2 -->
-                <div class="item">
-                  <div class="box">
-                    <div class="img-box">
-                      <img src="images/30.jpg" alt="Player">
-                      <div class="detail-box">
-                        <button>
-                          <img src="images/013.png" alt="Icon">
-                        </button>
-                        <div style="text-align: center;">
-                          <h2>Hosty Mtei</h2>
-                          <h2>Goalkeeper</h2>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="btn-box">
-                      <a href="#">See More</a>
-                    </div>
-                  </div>
-                </div>
-               <!-- Add other player items following the same structure -->
+            <div class="class_box-container">
+           <div class="owl-carousel owl_carousel1">
+  <!-- Player Item Template - Repeat 40x -->
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Ragaso Karisa</h2>
+            <h2 class="player-position">Goalkeeper</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Menza Harry</h2>
+            <h2 class="player-position">Defender</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+ <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Nelson Stewart</h2>
+            <h2 class="player-position">Defender</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+   <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Martin Kazungu</h2>
+            <h2 class="player-position">Defender</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+   <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Salim Omar</h2>
+            <h2 class="player-position">Defender</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Ali Luwali</h2>
+            <h2 class="player-position">Midfielder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+  <div class="box">
+    <div class="img-box">
+      <img src="images/23.jpg" alt="Player">
+      <div class="detail-box">
+        <div class="jersey-number">
+          <img src="images/016.png" alt="Jersey 016">
+        </div>
+        <div class="player-info">
+          <h2 class="player-name">Salim Ali</h2>
+          <h2 class="player-position">Midfielder</h2>
+        </div>
+      </div>
+    </div>
+    <div class="btn-box">
+      <a href="#">View Profile</a>
+    </div>
+  </div>
+</div>
+<div class="item">
+  <div class="box">
+    <div class="img-box">
+      <img src="images/23.jpg" alt="Player">
+      <div class="detail-box">
+        <div class="jersey-number">
+          <img src="images/030.png" alt="Jersey 030">
+        </div>
+        <div class="player-info">
+          <h2 class="player-name">Hassan Juma</h2>
+          <h2 class="player-position">Midfielder</h2>
+        </div>
+      </div>
+    </div>
+    <div class="btn-box">
+      <a href="#">View Profile</a>
+    </div>
+  </div>
+</div>
+  <div class="item">
+  <div class="box">
+    <div class="img-box">
+      <img src="images/23.jpg" alt="Player">
+      <div class="detail-box">
+        <div class="jersey-number">
+          <img src="images/040.png" alt="Jersey 040">
+        </div>
+        <div class="player-info">
+          <h2 class="player-name">David Nyamawangi</h2>
+          <h2 class="player-position">Midfielder</h2>
+        </div>
+      </div>
+    </div>
+    <div class="btn-box">
+      <a href="#">View Profile</a>
+    </div>
+  </div>
+</div>
+   <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Walcott Ria</h2>
+            <h2 class="player-position">Midfielder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">David Mugasia</h2>
+            <h2 class="player-position">Midfielder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Faki Kombe</h2>
+            <h2 class="player-position">Midfeilder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Kelvin Gitonga</h2>
+            <h2 class="player-position">Forward</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Juma Munga</h2>
+            <h2 class="player-position">Forward</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <!-- Repeat above block 39 more times -->
+</div>
               </div>
             </div>
           </div>
@@ -548,28 +769,24 @@ through effort, fair play, commitment and self-confidence. </p>
   </script>
 
   <!-- owl carousel script -->
-  <script type="text/javascript">
-    $(document).ready(function(){
-      $(".owl_carousel1").owlCarousel({
-        items: 2, // Number of items to display
-        loop: true,
-        margin: 20, // Space between items
-        nav: true,
-        navText: ["‹","›"], // Custom navigation arrows
-        responsive:{
-          0:{ // Mobile
-            items:1
-          },
-          768:{ // Tablet
-            items:2
-          },
-          992:{ // Desktop
-            items:2
-          }
-        }
-      });
-    });
-  </script>
+ <script type="text/javascript">
+$(document).ready(function(){
+  $(".owl_carousel1").owlCarousel({
+    items: 4,
+    loop: true,
+    margin: 20,
+    nav: true,
+    navText: ["‹","›"],
+    dots: false, // New addition
+    responsive:{
+      0:{ items:1 },
+      576:{ items:2 },
+      768:{ items:3 }, // New breakpoint
+      1200:{ items:4 }
+    }
+  });
+});
+</script>
   <!-- end owl carousel script -->
 
   <script>
