--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@ effort and fair play.
   <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/34.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
           </div>
           <div class="player-info">
-            <h2 class="player-name">Menza Harry</h2>
+            <h2 class="player-name">Menza Kahindi</h2>
             <h2 class="player-position">Defender</h2>
           </div>
         </div>
@@ -282,7 +282,7 @@ effort and fair play.
  <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/36.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
@@ -301,7 +301,7 @@ effort and fair play.
    <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/24.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
@@ -339,7 +339,7 @@ effort and fair play.
   <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/37.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
@@ -358,7 +358,7 @@ effort and fair play.
   <div class="item">
   <div class="box">
     <div class="img-box">
-      <img src="images/23.jpg" alt="Player">
+      <img src="images/26.jpg" alt="Player">
       <div class="detail-box">
         <div class="jersey-number">
           <img src="images/016.png" alt="Jersey 016">
@@ -377,7 +377,7 @@ effort and fair play.
 <div class="item">
   <div class="box">
     <div class="img-box">
-      <img src="images/23.jpg" alt="Player">
+      <img src="images/25.jpg" alt="Player">
       <div class="detail-box">
         <div class="jersey-number">
           <img src="images/030.png" alt="Jersey 030">
@@ -434,7 +434,7 @@ effort and fair play.
   <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/32.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
@@ -453,7 +453,7 @@ effort and fair play.
   <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/21b.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
@@ -491,7 +491,7 @@ effort and fair play.
   <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/35.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
