--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Oxer</title>
+  <title>Sporting Pearls</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -43,19 +43,19 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/telephone.png" alt="" />
-                    <span> +01 1234567890</span>
+                    <span> +254 114672189</span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>demo@gmail.com</span>
+                    <span> pearlssporting@gmail.com </span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/location.png" alt="" />
-                    <span>Den mark Loram ipusum</span>
+                    <span>Majengo, Kilifi</span>
                   </a>
                 </li>
               </ul>
@@ -114,7 +114,9 @@
                     </h2>
                   </div>
                   <p>
-                    iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipnisi ut aliquipiusmod tempor incididunt ut labore et
+                    Fc Sporting Pearls was founded in the Year 2020 and officially established in the year 2025,January,3rd. Headquartered in Majengo-Kanamai with the aim and objectives of identifying and nurturing young people with talent in Sporting Activities, improving the living standard of individuals and contributing to the empowerment of individuals,and promoting the development of inclusive communities.
+
+Born from a vision to make a difference, FC Sporting Pearls was created to address the challenges faced by young people in Majengo-Kanamai. We recognized the untapped potential in our youth and the transformative power of sport to inspire, unite, and create opportunities. Since our inception, we have grown into a thriving football academy and community initiative, dedicated to nurturing talent and fostering positive change.
                   </p>
                   <hr />
                   <a href="">
