--- a/class.html
+++ b/class.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Oxer</title>
+  <title>Sporting Pearls</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -43,7 +43,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/telephone.png" alt="" />
-                    <span> +01 1234567890</span>
+                    <span> +254 114672189</span>
                   </a>
                 </li>
                 <li class="">
@@ -55,7 +55,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/location.png" alt="" />
-                    <span>Den mark Loram ipusum</span>
+                    <span>Majengo, Kilifi</span>
                   </a>
                 </li>
               </ul>
@@ -110,11 +110,11 @@
               <div class="col-lg-9 col-md-10">
                 <div class="heading_container">
                   <h2>
-                    Our Classes Videos
+                    Team Players: The Heartbeat of Sporting Pearls
                   </h2>
                   <p>
-                    iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
-                    ostrud exercitation ullamco laboris iusmod tempor incididunt ut labore et dolore
+                    Main Team: Experience Meets Excellence
+The Sporting Pearls first team is a blend of seasoned professionals and rising stars, united by a shared vision of dynamic, high-intensity football. Comprising elite forwards, creative midfielders, rock-solid defenders, and agile goalkeepers, the squad thrives on tactical precision, relentless teamwork, and leadership forged through years of competitive play. Veterans anchor the team with strategic wisdom, while younger talents inject energy and innovation, creating a balance that fuels the club’s pursuit of silverware. Known for their adaptability and flair, the main team embodies Sporting Pearls’ ethos: “Strength in unity, brilliance in execution.”
                   </p>
                 </div>
               </div>
