--- a/class.html
+++ b/class.html
@@ -275,8 +275,8 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
                   </a>
                 </div>
                 <p>
-                  &copy; 2020 All Rights Reserved. Design by
-                  <a href="https://html.design/">Free Html Templates</a>
+                  &copy; 2025 All Rights Reserved. 
+                  <a href="https://html.design/">Sporting Pearls</a>
                 </p>
               </section>
               <!-- footer section -->
