--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Oxer</title>
+  <title>Sporting Pearls</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -43,19 +43,19 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/telephone.png" alt="" />
-                    <span> +01 1234567890</span>
+                    <span> +254 114672189</span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>demo@gmail.com</span>
+                    <span> info@sportingpearls.com</span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/location.png" alt="" />
-                    <span>Den mark Loram ipusum</span>
+                    <span>Majrngo, Kanamai</span>
                   </a>
                 </li>
               </ul>
@@ -78,7 +78,7 @@
                         <a class="nav-link" href="about.html"> About </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="class.html"> Classes </a>
+                        <a class="nav-link" href="class.html"> Players </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="blog.html">Blog</a>
@@ -107,10 +107,10 @@
         <div class="col-md-10 ml-auto">
           <div class="heading_container">
             <h2>
-              Latest Blog
+              Latest News
             </h2>
             <p>
-              iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
+              Projects Coming Soon.
             </p>
           </div>
         </div>
@@ -131,7 +131,7 @@
                     </h6>
                   </div>
                   <h3>
-                    Boxer Joniya Daro
+                    Stephen Manley
                   </h3>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
